src/lib/_brt/_brt.h

extern struct ExecBase      *SysBase;
extern struct DOSBase       *DOSBase;
extern struct MathTransBase *MathTransBase;
void   POKE (ULONG adr, UBYTE  b);
void   POKEW(ULONG adr, USHORT w);
void   POKEL(ULONG adr, ULONG  l);
// BASIC error handling, utils

void _debug_puts (const char *s);
void _debug_puts2(SHORT s);
void _debug_putnl(void);
#define ERR_OUT_OF_MEMORY           7
#define ERR_SUBSCRIPT_OUT_OF_RANGE  9
void ERROR (SHORT errcode);
void _aqb_assert (BOOL b, const char *msg);
void SYSTEM(void);
#define BYTE   char
#define UBYTE  unsigned char
#define LONG   long
#define ULONG  unsigned long
typedef struct
{
    APTR          data;
    UWORD         numDims;
    ULONG         elementSize;
    _dyna_bounds *bounds;
} _dyna;
void  _dyna_init    (_dyna *dyna, UWORD numDims, ULONG elementSize, ...);