src/lib/_brt/_brt.bas

'
' _brt: BASIC runtime, minimal core needed to support the compiler's generated code
'

OPTION EXPLICIT
OPTION PRIVATE

' ERROR codes

PUBLIC EXTERN ERR AS INTEGER

PUBLIC CONST AS INTEGER ERR_OUT_OF_MEMORY          = 7
PUBLIC CONST AS INTEGER ERR_SUBSCRIPT_OUT_OF_RANGE = 9

PUBLIC DECLARE SUB _debug_puts (s AS STRING)
PUBLIC DECLARE SUB _debug_puts2(s AS INTEGER)
PUBLIC DECLARE SUB _debug_putnl

' AmigaOS library bases

PUBLIC EXTERN SysBase AS VOID PTR
PUBLIC EXTERN DOSBase AS VOID PTR
PUBLIC EXTERN MathTransBase AS VOID PTR

' math support

PUBLIC DECLARE FUNCTION fix   (f AS SINGLE) AS INTEGER
PUBLIC DECLARE FUNCTION int   (f AS SINGLE) AS INTEGER
PUBLIC DECLARE FUNCTION cint  (f AS SINGLE) AS INTEGER
PUBLIC DECLARE FUNCTION clng  (f AS SINGLE) AS LONG

PUBLIC CONST AS SINGLE PI = 3.14159

PUBLIC DECLARE FUNCTION ATN (f AS SINGLE) AS SINGLE LIB  -30 MathTransBase (d0)
PUBLIC DECLARE FUNCTION SIN (f AS SINGLE) AS SINGLE LIB  -36 MathTransBase (d0)
PUBLIC DECLARE FUNCTION COS (f AS SINGLE) AS SINGLE LIB  -42 MathTransBase (d0)
PUBLIC DECLARE FUNCTION TAN (f AS SINGLE) AS SINGLE LIB  -48 MathTransBase (d0)
PUBLIC DECLARE FUNCTION EXP (f AS SINGLE) AS SINGLE LIB  -78 MathTransBase (d0)
PUBLIC DECLARE FUNCTION LOG (f AS SINGLE) AS SINGLE LIB  -84 MathTransBase (d0)
PUBLIC DECLARE FUNCTION SQR (f AS SINGLE) AS SINGLE LIB  -96 MathTransBase (d0)
PUBLIC DECLARE FUNCTION ASIN(f AS SINGLE) AS SINGLE LIB -114 MathTransBase (d0)
PUBLIC DECLARE FUNCTION ACOS(f AS SINGLE) AS SINGLE LIB -120 MathTransBase (d0)

' STR$ support

PUBLIC DECLARE FUNCTION _s1toa   (b AS BYTE    ) AS STRING
PUBLIC DECLARE FUNCTION _s2toa   (i AS INTEGER ) AS STRING
PUBLIC DECLARE FUNCTION _s4toa   (l AS LONG    ) AS STRING
PUBLIC DECLARE FUNCTION _u1toa   (b AS UBYTE   ) AS STRING
PUBLIC DECLARE FUNCTION _u2toa   (i AS UINTEGER) AS STRING
PUBLIC DECLARE FUNCTION _u4toa   (l AS ULONG   ) AS STRING
PUBLIC DECLARE FUNCTION _ftoa    (f AS SINGLE  ) AS STRING
PUBLIC DECLARE FUNCTION _booltoa (b AS BOOLEAN ) AS STRING

' string utils

PUBLIC DECLARE FUNCTION len   (s AS STRING) AS LONG
PUBLIC DECLARE FUNCTION chr$  (i AS INTEGER)

' (dynamic) memory

PUBLIC DECLARE FUNCTION ALLOCATE (size AS ULONG, flags AS ULONG=0) AS VOID PTR
PUBLIC DECLARE FUNCTION FRE (x AS INTEGER) AS ULONG

PUBLIC DECLARE SUB POKE  (adr AS ULONG, b AS BYTE)
PUBLIC DECLARE SUB POKEW (adr AS ULONG, w AS UINTEGER)
PUBLIC DECLARE SUB POKEL (adr AS ULONG, l AS ULONG)

PUBLIC DECLARE FUNCTION PEEK  (adr AS ULONG) AS BYTE
PUBLIC DECLARE FUNCTION PEEKW (adr AS ULONG) AS INTEGER
PUBLIC DECLARE FUNCTION PEEKL (adr AS ULONG) AS ULONG

' dynamic array support

PUBLIC DECLARE SUB      _dyna_init   (dyna AS VOID PTR, numDims AS UINTEGER, elementSize AS ULONG, ...)
PUBLIC DECLARE FUNCTION _dyna_idx    (dyna AS VOID PTR, dimCnt AS UINTEGER, ...) AS VOID PTR
PUBLIC DECLARE FUNCTION _dyna_ubound (dyna AS VOID PTR, d AS UINTEGER) AS INTEGER
PUBLIC DECLARE FUNCTION _dyna_lbound (dyna AS VOID PTR, d AS UINTEGER) AS INTEGER

' misc

PUBLIC DECLARE SUB _aqb_assert (b AS BOOLEAN, s AS STRING)
PUBLIC DECLARE SUB ERROR (i AS INTEGER)
PUBLIC DECLARE SUB RESUME NEXT
PUBLIC DECLARE SUB ON ERROR CALL (p AS SUB)
PUBLIC DECLARE SUB ON EXIT CALL (p AS SUB)

PUBLIC DECLARE SUB SYSTEM

PUBLIC DECLARE FUNCTION TIMER() AS SINGLE

PUBLIC CONST AS VOID PTR NULL = 0

PUBLIC EXTERN g_stdout AS VOID PTR

